--- a/src/components/Hello/Hello.module.scss
+++ b/src/components/Hello/Hello.module.scss
@@ -9,11 +9,20 @@
     color: #1937a5;
   }
   &__text {
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 20px;
     font-weight: lighter;
+    width: 70%;
+    text-align:center;
+    display: flex;
+    justify-content: center;
+
+    @media screen and (max-width: 440px) {
+      width: 90%;
+    }
   }
   &__title {
     margin: 0;
+    margin-top: -10px;
   }
 }
