--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -5,6 +5,11 @@
         display: flex;
         justify-content: center;
         margin-bottom: 30px;
+        font-size: 32px;
+
+        @media screen and (max-width: 640px) {
+            font-size: 24px;
+          }
     }
 }
 
