--- a/src/components/IVapeWindow/IVapeWindow.module.scss
+++ b/src/components/IVapeWindow/IVapeWindow.module.scss
@@ -4,15 +4,25 @@
     width: 400px;
     height: 200px;
     color: white;
-    background-color: #08080d;
+    background-color: #08080d ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: absolute;
     left: calc(50% - 200px);
-    top:230px;
+    top:250px;
     padding: 0;
+
+    @media screen and (max-width: 640px) {
+        top:180px;
+    }
+    @media screen and (max-width: 500px) {
+        width: 300px;
+        height: 230px;
+        left: calc(50% - 150px);
+        top:150px;
+    }
 
     &__textContent{
         margin: 30px;
