--- a/src/components/IVapedButton/IVapedButton.module.scss
+++ b/src/components/IVapedButton/IVapedButton.module.scss
@@ -1,4 +1,4 @@
-.iSmokeButton {
+.iVapeButton {
     border: none;
     background-color:rgb(131, 31, 31);
     color: white;
@@ -12,7 +12,7 @@
     padding: 5px;
     box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
     margin-left: calc(50% - 125px);
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 30px;
   }
   
