--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -6,9 +6,10 @@
         justify-content: center;
         margin-bottom: 30px;
         font-size: 32px;
+        margin-top: 40px;
 
         @media screen and (max-width: 640px) {
-            font-size: 24px;
+            font-size: 28px;
           }
     }
 }
