--- a/src/pages/Blog/Blog.module.scss
+++ b/src/pages/Blog/Blog.module.scss
@@ -1,6 +1,9 @@
 .blog{
     display: flex;
-    border: 1px red solid;
     justify-content: center;
     align-items: center;
+
+    &__title{
+        margin-top: 0px;
+    }
 }
