--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -3,20 +3,33 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  
 
+  &__itemTitle{
+    font-size: 24px;
+    margin: 0px;
+  }
+  &__itemTitle2{
+    font-size: 16px;
+    margin: 0px;
+  }
   &__item {
     border: 1px #08080d solid;
     list-style-type: none;
-    margin: 30px;
-    width: 300px;
-    height: 300px;
+    margin-bottom: 30px;
+    width: 500px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 50%;
+    border-radius: 10px;
+
+    @media screen and (max-width: 640px) {
+      width: 80%;
+    }
   }
   &__itemFinish {
     @extend .steps__item;
