--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -20,12 +20,13 @@
     list-style-type: none;
     margin-bottom: 30px;
     width: 500px;
-    height: 80px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-radius: 10px;
+    border-radius: 50px;
+    margin-bottom: 10px;
 
     @media screen and (max-width: 640px) {
       width: 80%;
