Добавил функции в профиль

--- a/src/pages/Statistics/Statistics.module.scss
+++ b/src/pages/Statistics/Statistics.module.scss
@@ -45,6 +45,8 @@
         justify-content: center;
         text-align:center;
         margin-top: 0px;
+        margin-bottom: -10px;
+        height: 50px;
     }
 
 }
