--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -13,6 +13,8 @@
         height: 200px;
         border-radius: 50%;
         margin-bottom: 30px;
+        object-fit: cover;
+        object-position: center;
     }
     &__inputAvatar{
         display: none;
@@ -30,7 +32,7 @@
         display: flex;
         flex-direction: column;
     }
-    &__inputName{
+    &__input{
         background: #f4f4f5;
         border: none;
         border-radius: 8px;
@@ -40,19 +42,10 @@
         width: 350px;
         outline: none;
         margin-top: 5px;
-        
+        height: 42px;
     }
-    &__inputDate{
-        background: #f4f4f5;
-        border: none;
-        border-radius: 8px;
-        padding: 12px 16px;
-        font-size: 16px;
-        color: #000;
-        width: 350px;
-        outline: none;
-        margin-top: 5px;
-    }
+
+
 
     
 }
