Изменения элементов при наведении

--- a/src/components/IVapedButton/IVapedButton.module.scss
+++ b/src/components/IVapedButton/IVapedButton.module.scss
@@ -14,5 +14,11 @@
     margin-left: calc(50% - 125px);
     margin-top: 20px;
     margin-bottom: 30px;
+    cursor: pointer;
+
+    &:hover{
+      background-color:rgb(109, 29, 29);
+    }
+
   }
   
