--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -28,6 +28,8 @@
   &__icon {
     color: white;
     font-size: 36px;
+    cursor: pointer;
+
     &:hover {
       color: #dcdcdc;
     }
@@ -47,6 +49,7 @@
     top: calc(100px - 40px);
     left: 50px;
     height: 80px;
+    
 
     @media screen and (max-width: 640px) {
       top: calc(50px - 25px);
