--- a/src/components/IVapeWindow/IVapeWindow.module.scss
+++ b/src/components/IVapeWindow/IVapeWindow.module.scss
@@ -1,42 +1,47 @@
-.window{
+.window {
+  box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
+  border-radius: 10px;
+  width: 400px;
+  height: 200px;
+  color: white;
+  background-color: #08080d;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  left: calc(50% - 200px);
+  top: 350px;
+  padding: 0;
+
+  @media screen and (max-width: 640px) {
+    top: 250px;
+  }
+  @media screen and (max-width: 500px) {
+    width: 300px;
+    height: 230px;
+    left: calc(50% - 150px);
+    top: 220px;
+  }
+
+  &__textContent {
+    margin: 30px;
+  }
+
+  &__button {
+    border: none;
+    color: white;
+    background-color: #1f984a;
+    width: 120px;
+    height: 40px;
     box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
     border-radius: 10px;
-    width: 400px;
-    height: 200px;
-    color: white;
-    background-color: #08080d ;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    left: calc(50% - 200px);
-    top:350px;
-    padding: 0;
+    padding: 10px;
+    margin-bottom: 20px;
+    cursor: pointer;
 
-    @media screen and (max-width: 640px) {
-        top:250px;
+    &:hover{
+      background-color: #1b793c;
     }
-    @media screen and (max-width: 500px) {
-        width: 300px;
-        height: 230px;
-        left: calc(50% - 150px);
-        top:220px;
-    }
-
-    &__textContent{
-        margin: 30px;
-    }
-
-    &__button{
-        border: none;
-        color: white;
-        background-color:#1f984a;
-        width: 120px;
-        height: 40px;
-        box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
-        border-radius: 10px;
-        padding: 10px;
-        margin-bottom: 20px;
-    }
+  }
 }
