--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -1,51 +1,51 @@
-.profile{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+.profile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-
-    &__title{
-        margin-bottom: 30px;
-    }
-    &__avatar{
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        margin-bottom: 30px;
-        object-fit: cover;
-        object-position: center;
-    }
-    &__inputAvatar{
-        display: none;
-    }
-    &__labelAvatar{
-        color: white;
-        background-color: #08080d;
-        padding: 7px 20px;
-        border-radius: 40px;
-        font-size: 16px;
-        box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
-    }
-    &__form{
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-    }
-    &__input{
-        background: #f4f4f5;
-        border: none;
-        border-radius: 8px;
-        padding: 12px 16px;
-        font-size: 16px;
-        color: #000;
-        width: 350px;
-        outline: none;
-        margin-top: 5px;
-        height: 42px;
-    }
-
-
-
+  &__title {
+    margin-bottom: 30px;
+  }
+  &__avatar {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+    object-fit: cover;
+    object-position: center;
+  }
+  &__inputAvatar {
+    display: none;
+  }
+  &__labelAvatar {
+    color: white;
+    background-color: #08080d;
+    padding: 7px 20px;
+    border-radius: 40px;
+    font-size: 16px;
+    box-shadow: -4px 3px 7px rgba(32, 29, 29, 0.46);
+    cursor: pointer;
     
+    &:hover{
+      color: #dcdcdc;
+    }
+  }
+  &__form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  &__input {
+    background: #f4f4f5;
+    border: none;
+    border-radius: 8px;
+    padding: 12px 16px;
+    font-size: 16px;
+    color: #000;
+    width: 350px;
+    outline: none;
+    margin-top: 5px;
+    height: 42px;
+  }
 }
